--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "pinia": "^2.2.2",
     "prisma": "^5.19.1"
   }
 }
